# quiz-bot

./: .gitignore  README.md  bot.py  config.py  main.py  pyproject.toml  quiz_bot.db  quiz_data.py
bot/: keyboards.py
bot/handlers/: quiz.py  start.py  stats.py
database/: crud.py  engine.py
models/: quiz.py
