[project]
name = "quiz-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Mojusei",email = "metra9991@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15po"
dependencies = [
    "aiogram (>=3.23.0,<4.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
